deploy: c57a24bbfa2a1394c47d1ac77fadc5a240814c5d

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 	<head>
 		<meta charset="UTF-8">
-		<title>Vahki Animations</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+		<title>Vahki Animations</title>
 		<style>
 			* {
 				margin: 0;
@@ -46,18 +46,18 @@
 		<div class="main">
 			<div class="player">
 				<object
-					classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
-					codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0"
+					classid="clsid:D27CDB6E-AE6D-11CF-96B8-444553540000"
 					width="720"
 					height="540"
 				>
 					<param name="movie" value="vahkianimations.swf">
+					<param name="bgcolor" value="#000000">
 					<embed
 						type="application/x-shockwave-flash"
-						pluginspage="http://www.macromedia.com/go/getflashplayer"
 						width="720"
 						height="540"
 						src="vahkianimations.swf"
+						bgcolor="#000000"
 					>
 				</object>
 			</div>
